# ImGUIPictureViewer

./: CMakeLists.txt  README.md
App/: CMakeLists.txt  main.cpp
Backend/: CMakeLists.txt  ContextWindow.cpp  ContextWindow.h  GraphicalBackend.cpp  GraphicalBackend.h  GraphicalBackendImpl.cpp  GraphicalBackendImpl.h
Base/: GraphicalElement.cpp  GraphicalElement.h
Core/: CMakeLists.txt  Color.h  Core.h  Dummy.cpp  Dummy.h  LimitedValue.h  StateValue.h
PictureViewer/: CMakeLists.txt  Color.h  FrameWindow.cpp  FrameWindow.h  FrameWindowImpl.cpp  FrameWindowImpl.h  PictureViewer.h
PictureViewer/Geometries/: Circle.h  Point2D.h  Polygon.h  Processing2D.cpp  Processing2D.h  Rect.h  RotRect.h
PictureViewer/GraphicalObject/: CircleGraphics.cpp  CircleGraphics.h  GraphicalObject.cpp  GraphicalObject.h  PolygonGraphics.cpp  PolygonGraphics.h  RectangleGraphics.cpp  RectangleGraphics.h  RotatedRectangleGraphics.cpp  RotatedRectangleGraphics.h
Utilities/: CMakeLists.txt  DataParseUtil.cpp  DataParseUtil.h  Frame.cpp  Frame.h  NiftyMath.cpp  NiftyMath.h  Timer.cpp  Timer.h
imgui/: CMakeLists.txt
imgui/imgui/: imgui_impl_opengl3.h
